Footer: new version

--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -1,94 +1,106 @@
 <footer class="footer">
     <div class="container-big">
-        
+
         <div class="row">
 
             <div class="col-xl">
-                <div class="title-5 color-white">Услуги</div>
-                <ul class="footer__list">
+                <div class="footer__accordion_link title-5 color-white" data-target="#footerAccordionContent-1">
+                    Услуги
+                    <span class="accordion__arrow"></span>
+                </div>
+                <ul class="footer__accordion_content footer__list" id="footerAccordionContent-1">
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Бесплатная консультация</a>
+                        <a class="footer__list_item_link color-white" href="#">Бесплатная консультация</a>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Консультация по лечению без боли</a>
+                        <a class="footer__list_item_link color-white" href="#">Консультация по лечению без боли</a>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Терапевтическая стоматология</a>
+                        <a class="footer__list_item_link color-white" href="#">Терапевтическая стоматология</a>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Хирургическая стоматология</a>
+                        <a class="footer__list_item_link color-white" href="#">Хирургическая стоматология</a>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Имплантология</a>
+                        <a class="footer__list_item_link color-white" href="#">Имплантология</a>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Ортопедическая стоматология</a>
+                        <a class="footer__list_item_link color-white" href="#">Ортопедическая стоматология</a>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Отбеливание зубов</a>
+                        <a class="footer__list_item_link color-white" href="#">Отбеливание зубов</a>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Изготовление капп</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-xl">
-                <div class="title-5 color-white">Наши специалисты</div>
-                <ul class="footer__list">
-                    <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Ворончихин Антон Игоревич</a>
-                    </li>
-                    <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Казанцев Сергей Николаевич</a>
-                    </li>
-                    <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Казанцева Ирина Владимировна</a>
-                    </li>
-                    <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Скобелкина Виолетта Викторовна</a>
-                    </li>
-                    <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Гаврилов Олег Альбертович</a>
-                    </li>
-                    <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Помаскина Евгения Александровна</a>
-                    </li>
-                    <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Ворончихина Елена Юрьевна</a>
+                        <a class="footer__list_item_link color-white" href="#">Изготовление капп</a>
                     </li>
                 </ul>
             </div>
             <div class="col-xl">
-                <div class="title-5 color-white">О компании</div>
-                <ul class="footer__list">
+                <div class="footer__accordion_link title-5 color-white" data-target="#footerAccordionContent-2">
+                    Наши специалисты
+                    <span class="accordion__arrow"></span>
+                </div>
+                <ul class="footer__accordion_content footer__list" id="footerAccordionContent-2">
+                    <li class="footer__list_item">
+                        <a class="footer__list_item_link color-white" href="#">Ворончихин Антон Игоревич</a>
+                    </li>
+                    <li class="footer__list_item">
+                        <a class="footer__list_item_link color-white" href="#">Казанцев Сергей Николаевич</a>
+                    </li>
+                    <li class="footer__list_item">
+                        <a class="footer__list_item_link color-white" href="#">Казанцева Ирина Владимировна</a>
+                    </li>
+                    <li class="footer__list_item">
+                        <a class="footer__list_item_link color-white" href="#">Скобелкина Виолетта Викторовна</a>
+                    </li>
+                    <li class="footer__list_item">
+                        <a class="footer__list_item_link color-white" href="#">Гаврилов Олег Альбертович</a>
+                    </li>
+                    <li class="footer__list_item">
+                        <a class="footer__list_item_link color-white" href="#">Помаскина Евгения Александровна</a>
+                    </li>
+                    <li class="footer__list_item">
+                        <a class="footer__list_item_link color-white" href="#">Ворончихина Елена Юрьевна</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-xl">
+                <div class="footer__accordion_link title-5 color-white" data-target="#footerAccordionContent-3">
+                    О компании
+                    <span class="accordion__arrow"></span>
+                </div>
+                <ul class="footer__accordion_content footer__list" id="footerAccordionContent-3">
                     <li class="footer__list_item">
                         <div class="footer__accordion accordion" id="footerAccordion-1">
                             <div class="card">
                                 <div class="card-header" id="footerAccordionLink-1">
-                                    <button class="accordion__link color-white collapsed" data-toggle="collapse" data-target="#collapseFooter-1"
-                                            aria-expanded="false" aria-controls="collapseFooter-1">
+                                    <button aria-controls="collapseFooter-1" aria-expanded="false"
+                                            class="accordion__link color-white collapsed"
+                                            data-target="#collapseFooter-1" data-toggle="collapse">
                                         Наши работы
                                         <span class="accordion__arrow"></span>
                                     </button>
                                 </div>
 
-                                <div id="collapseFooter-1" class="collapse" aria-labelledby="footerAccordionLink-1" data-parent="#footerAccordion-1">
+                                <div aria-labelledby="footerAccordionLink-1" class="collapse"
+                                     data-parent="#footerAccordion-1"
+                                     id="collapseFooter-1">
                                     <div class="card-body">
                                         <ul class="footer__accordion_list">
                                             <li class="footer__accordion_list_item">
-                                                <a href="#" class="footer__list_item_link color-white">Наши работы</a>
+                                                <a class="footer__list_item_link color-white" href="#">Наши работы</a>
                                             </li>
                                             <li class="footer__accordion_list_item">
-                                                <a href="#" class="footer__list_item_link color-white">Наши работы</a>
+                                                <a class="footer__list_item_link color-white" href="#">Наши работы</a>
                                             </li>
                                             <li class="footer__accordion_list_item">
-                                                <a href="#" class="footer__list_item_link color-white">Наши работы</a>
+                                                <a class="footer__list_item_link color-white" href="#">Наши работы</a>
                                             </li>
                                             <li class="footer__accordion_list_item">
-                                                <a href="#" class="footer__list_item_link color-white">Наши работы</a>
+                                                <a class="footer__list_item_link color-white" href="#">Наши работы</a>
                                             </li>
                                             <li class="footer__accordion_list_item">
-                                                <a href="#" class="footer__list_item_link color-white">Наши работы</a>
+                                                <a class="footer__list_item_link color-white" href="#">Наши работы</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -97,50 +109,56 @@
                         </div>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Отзывы</a>
+                        <a class="footer__list_item_link color-white" href="#">Отзывы</a>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Новости, новинки, статьи</a>
+                        <a class="footer__list_item_link color-white" href="#">Новости, новинки, статьи</a>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Лицензии и сертификаты</a>
+                        <a class="footer__list_item_link color-white" href="#">Лицензии и сертификаты</a>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Гарантии</a>
+                        <a class="footer__list_item_link color-white" href="#">Гарантии</a>
                     </li>
                 </ul>
             </div>
             <div class="col-xl">
-                <div class="title-5 color-white">Цены</div>
-                <ul class="footer__list">
+                <div class="footer__accordion_link title-5 color-white" data-target="#footerAccordionContent-4">
+                    Цены
+                    <span class="accordion__arrow"></span>
+                </div>
+                <ul class="footer__accordion_content footer__list" id="footerAccordionContent-4">
                     <li class="footer__list_item">
                         <div class="footer__accordion accordion" id="footerAccordion-2">
                             <div class="card">
                                 <div class="card-header" id="footerAccordionLink-2">
-                                    <button class="accordion__link color-white collapsed" data-toggle="collapse" data-target="#collapseFooter-2"
-                                            aria-expanded="false" aria-controls="collapseFooter-2">
+                                    <button aria-controls="collapseFooter-2" aria-expanded="false"
+                                            class="accordion__link color-white collapsed"
+                                            data-target="#collapseFooter-2" data-toggle="collapse">
                                         Направления
                                         <span class="accordion__arrow"></span>
                                     </button>
                                 </div>
 
-                                <div id="collapseFooter-2" class="collapse" aria-labelledby="footerAccordionLink-2" data-parent="#footerAccordion-2">
+                                <div aria-labelledby="footerAccordionLink-2" class="collapse"
+                                     data-parent="#footerAccordion-2"
+                                     id="collapseFooter-2">
                                     <div class="card-body">
                                         <ul class="footer__accordion_list">
                                             <li class="footer__accordion_list_item">
-                                                <a href="#" class="footer__list_item_link color-white">Направления</a>
+                                                <a class="footer__list_item_link color-white" href="#">Направления</a>
                                             </li>
                                             <li class="footer__accordion_list_item">
-                                                <a href="#" class="footer__list_item_link color-white">Направления</a>
+                                                <a class="footer__list_item_link color-white" href="#">Направления</a>
                                             </li>
                                             <li class="footer__accordion_list_item">
-                                                <a href="#" class="footer__list_item_link color-white">Направления</a>
+                                                <a class="footer__list_item_link color-white" href="#">Направления</a>
                                             </li>
                                             <li class="footer__accordion_list_item">
-                                                <a href="#" class="footer__list_item_link color-white">Направления</a>
+                                                <a class="footer__list_item_link color-white" href="#">Направления</a>
                                             </li>
                                             <li class="footer__accordion_list_item">
-                                                <a href="#" class="footer__list_item_link color-white">Направления</a>
+                                                <a class="footer__list_item_link color-white" href="#">Направления</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -149,35 +167,38 @@
                         </div>
                     </li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__list_item_link color-white">Лечение в кредит</a>
+                        <a class="footer__list_item_link color-white" href="#">Лечение в кредит</a>
                     </li>
                 </ul>
             </div>
             <div class="col-xl">
-                <div class="title-5 color-white">Контакты</div>
-                <ul class="footer__list">
+                <div class="footer__accordion_link title-5 color-white" data-target="#footerAccordionContent-5">
+                    Контакты
+                    <span class="accordion__arrow"></span>
+                </div>
+                <ul class="footer__accordion_content footer__list" id="footerAccordionContent-5">
                     <li class="footer__list_item">
                         <div class="footer__list_item_info color-white">
-                            <img class="footer__list_item_info_icon" src="../../../img/svg/pin.svg" alt="">
+                            <img alt="" class="footer__list_item_info_icon" src="../../../img/svg/pin.svg">
                             610021, г. Киров <br>
                             ул. М. Конева, 7, корпус 5
                         </div>
                     </li>
                     <li class="footer__list_item">
                         <div class="footer__list_item_info color-white">
-                            <img class="footer__list_item_info_icon" src="../../../img/svg/call.svg" alt="">
+                            <img alt="" class="footer__list_item_info_icon" src="../../../img/svg/call.svg">
                             8 (8332) 711-404
                         </div>
                     </li>
                     <li class="footer__list_item">
                         <div class="footer__list_item_info color-white">
-                            <img class="footer__list_item_info_icon" src="../../../img/svg/mail.svg" alt="">
+                            <img alt="" class="footer__list_item_info_icon" src="../../../img/svg/mail.svg">
                             dentist43@gmail.com
                         </div>
                     </li>
                     <li class="footer__list_item">
                         <div class="footer__list_item_info color-white">
-                            <img class="footer__list_item_info_icon" src="../../../img/svg/clock.svg" alt="">
+                            <img alt="" class="footer__list_item_info_icon" src="../../../img/svg/clock.svg">
                             пн-пт: 9:00-20:00 <br>
                             сб: 9:00-14:00 <br>
                             вс — выходной
@@ -196,13 +217,13 @@
             <div class="col-xl"></div>
             <ul class="footer__bottom_list col-xl">
                 <li class="footer__bottom_list_item">
-                    <a href="#" class="btn-3 btn-dark">
-                        <img src="../../../img/svg/vk.svg" alt="">
+                    <a class="btn-3 btn-dark" href="#">
+                        <img alt="" src="../../../img/svg/vk.svg">
                         Вконтакте
                     </a>
                 </li>
                 <li class="footer__bottom_list_item">
-                    <a href="#" class="footer__bottom_list_item_policy">Политика конфиденциальности</a>
+                    <a class="footer__bottom_list_item_policy" href="#">Политика конфиденциальности</a>
                 </li>
                 <li class="footer__bottom_list_item">
                     <span class="footer__bottom_list_item_copy">Copyright © 2019. ООО «Дантист»</span>
@@ -210,7 +231,7 @@
             </ul>
         </div>
         <!-- /.row -->
-        
+
     </div>
     <!-- /.container-big -->
 </footer>
